--- a/Frontend/GramoFER/src/compotents/VinylBox/VinylBox.module.css
+++ b/Frontend/GramoFER/src/compotents/VinylBox/VinylBox.module.css
@@ -1,10 +1,8 @@
-.vinylBox{
-  padding: 5px;
-  padding-right: 0;
-  border: 1px solid black;
-  border-radius: 5px;
-  width: 100%;
-  height: 20vh;
-  background-color: aliceblue;
-  margin-bottom: 5px;
+
+.filter_row{
+  overflow-x: auto;
+  height: 80%;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
