--- a/Frontend/GramoFER/src/compotents/VinylSelect/VinylSelect.module.css
+++ b/Frontend/GramoFER/src/compotents/VinylSelect/VinylSelect.module.css
@@ -1,25 +1,49 @@
 .container{
+  padding-top: 10px;
+  color: white;
   padding-bottom: 5px;
   margin-top: 10px;
-  margin-left: 2vw;
+  margin-left: 4vw;
+  margin-right: 4vw;
   padding-right: 3.5vw;
   height: fit-content;
-  width: 70vw;
-  background-color: #BDEDE0;
+  width: 1fr ;
+
   border: 1px solid black;
   padding-left: 3.5vw;
   font-family: 'Open Sans', sans-serif;
 }
-.filter{
-  margin-top: 10px;
-  height: 7vh;
-  background-color: #bdede0;
+.welcome_banner{
+  margin-bottom: 10px;
+  width: 1fr;
+  height: 30vh;
+  color: white;
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+.image_crop{
   width: 100%;
+  height: 100%;     
+  background-image: url('/public/images/gramofon_banner.jpg'); 
+  background-size: cover;
+  background-position: center; 
+  overflow: hidden;     
+}
+.banner_text{
+  background-color: #2F2D2E;
+  padding-top: 5px;
+  padding-left: 10px;
+}
+.filter{
+  padding-left: 10px;
+  padding-right: 10px;
+  height: fit-content;
+  width: 1fr;
+  color: black;
+  margin-bottom: 10px;
+  margin-top: 40px;
   display: flex;
-  flex-direction: row;
-  text-align: center;
-  align-items:center;
-  justify-content: space-between;
+  flex-direction: column;
 }
 .select{
   width: 200px;
@@ -34,4 +58,12 @@ input[type="search"] {
   font-size: 16px;
   border-radius: 4px;
   border: 1px solid #ccc;
+}
+.row{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.genre_select{
+  margin-left: auto;
 }
